Update 25. 브랜치 리베이스 rebase.md

--- a/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
+++ b/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
@@ -101,3 +101,56 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/fd2878d3-c170-471c-a1b3-c61d389ed55f)
 - - -
+### (5) 2. Rebase 병합
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/626f1648-f117-4da8-837a-71dac25f0467)
+- - -
+### (6) 2. Rebase 병합
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/7a95a654-9b4b-42d4-ab18-0ef27d86ef4c)
+- - -
+### (7) $ git rebase <newparent> <branch>
+#### ◈ 일반적 rebase 방법
+  - topic에서 main을 rebase 한 이후, 다시 main으로 이동 fast-forward 병합 수행
+
+    - $ git checkout topic
+    - $ git rebase main
+    - $ git checkout main
+    - $ git merge topic 
+
+#### ◈ 다른 rebase 방법: 어느 브랜치든 main topic 순서로 재배치 방법
+  - $ git rebase main topic
+  - $ git checkout main
+  - $ git merge topic
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/47e27369-0688-48dd-9a20-f12e3c80dcab)
+- - -
+### (8) [실습] Rebase 이전
+#### ◈ 다음 상태
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/18e5bf2b-4ce5-40e9-96ae-b7c015732d01)
+- - -
+### (9) Rebase 수행
+#### ◈ 브랜치 topic에서 수행
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/dd598f5d-2189-45ab-b4a5-d682eac825b6)
+- - -
+### (10) Rebase 수행
+#### ◈ 브랜치 main에서 브랜치 topic으로 빨리 감기
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/19e730b5-1d2b-4f51-acb7-47c275a5b701)
+- - -
+- - -
+## == Summary ==
+- - -
+* * *
+### (1) 기준 브랜치에서 main 브랜치 rebase 병합
+#### ◈ $ git checkout topic
+#### ◈ $ git merge main
+- - -
+### (2) 다시 main을 돌아와 fast-forward 병합 진행
+#### ◈ $ git checkout main
+#### ◈ $ git merge topic
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/51b15fb6-bc00-4694-8330-89972f54b106)
+- - -
