Update 26. 커밋 이력 수정.md

--- a/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
+++ b/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
@@ -16,3 +16,36 @@
 
     - 새로운 커밋 ID로 수정됨
 - - -
+### (2) 최근 커밋 내용 수정
+#### ◈ HEAD의 내용 수정
+  - 새로운 파일을 추가하거나 파일을 수정한 후
+
+  - 새로운 커밋으로 생성하지 않고
+
+  - 최신 커밋에 반영
+    - 새로운 커밋 ID로 수정됨
+#### ◈ 커밋 옵션 --amend 사용
+  - 기본 편집기로 메시지 편집
+
+    - $ git commit --amend
+  - 명령어 상에 직접 메시지 입력
+
+    - $ git commit --amend –m 'new message‘
+  - 메시지 수정 없이 다시 커밋 수정
+
+    - $ git commit --amend --no -edit
+- - -
+## 2) rebase -i로 여러 커밋 수정
+- - -
+* * *
+### (1) rebase의 --interactive를 사용
+#### ◈ 작업공간이 깨끗한 이후, 이전 여러 개의 커밋을 수정
+  - 이전 커밋을 다시 작성한 경우 새 ID가 부여
+#### ◈ rebase의 --interactive를 사용하여 커밋 시퀀스를 새로운 기본 커밋에 결합
+  - $ git rebase -i HEAD~3
+
+  - $ git rebase --interactive HEAD~3
+    - HEAD~3: 수정할 커밋의 직전 커밋
+    - 실제 HEAD~2부터 수정 가능
+- - -
+
