Update 26. 커밋 이력 수정.md

--- a/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
+++ b/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
@@ -48,4 +48,19 @@
     - HEAD~3: 수정할 커밋의 직전 커밋
     - 실제 HEAD~2부터 수정 가능
 - - -
+### (2) rebase의 --interactive 주요 명령어
+#### ◈ $ git rebase --interactive HEAD~3
+  - 기본 편집기로 열리며, HEAD~3이면 HEAD~2, HEAD~1, HEAD 3개의 행을 편집 가능
 
+  - 로그 결과와 다르게 오래된 커밋부터 표시
+    - pick 486bbc1 B
+    - pick a471bb3 C
+    - pick bb0a874 D
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/135d31e4-58da-4e62-ad4e-ad5c01c70769)
+#### ◈ 주요 rebase –i 대화형 명령어
+  - p(ick) : 해당 커밋을 수정하지 않고 그대로 사용
+  - r(eword) : 개별 커밋 메시지를 다시 작성
+  - s(quash) : 계속된 이후 커밋을 이전 커밋에 결합
+  - d(rop) : 커밋 자체를 삭제
+- - -
