Update 26. 커밋 이력 수정.md

--- a/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
+++ b/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
@@ -50,7 +50,7 @@
 - - -
 ### (2) rebase의 --interactive 주요 명령어
 #### ◈ $ git rebase --interactive HEAD~3
-  - 기본 편집기로 열리며, HEAD~3이면 HEAD~2, HEAD~1, HEAD 3개의 행을 편집 가능
+  - 기본 편집기로 열리며, HEAD ~ 3이면 HEAD ~ 2, HEAD ~ 1, HEAD 3개의 행을 편집 가능
 
   - 로그 결과와 다르게 오래된 커밋부터 표시
     - pick 486bbc1 B
@@ -64,3 +64,10 @@
   - s(quash) : 계속된 이후 커밋을 이전 커밋에 결합
   - d(rop) : 커밋 자체를 삭제
 - - -
+### (2) 명령 squash 방법
+#### ◈ 이후 것(더 최신의 커밋)을 이전 커밋(더 오래된 커밋)에 뭉치는 방법
+  - 상위에 위치한 커밋에 pick이 있으면서
+
+    - 아래로 연속적으로 squash 명령
+    - 다음으로 커밋 E가 커밋 BB에 뭉쳐져 커밋 E가 제거됨
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> pick 0e88bee BB<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> squash d88525b E</p>
