Update 26. 커밋 이력 수정.md

--- a/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
+++ b/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
@@ -64,10 +64,21 @@
   - s(quash) : 계속된 이후 커밋을 이전 커밋에 결합
   - d(rop) : 커밋 자체를 삭제
 - - -
-### (2) 명령 squash 방법
+### (3) 명령 squash 방법
 #### ◈ 이후 것(더 최신의 커밋)을 이전 커밋(더 오래된 커밋)에 뭉치는 방법
   - 상위에 위치한 커밋에 pick이 있으면서
 
     - 아래로 연속적으로 squash 명령
     - 다음으로 커밋 E가 커밋 BB에 뭉쳐져 커밋 E가 제거됨
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> pick 0e88bee BB<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> squash d88525b E</p>
+
+#### ◈ 새로운 커밋 메시지를 입력하는 단계 있음
+  - 기본 편집기로 편집
+
+    - BB와 E를 합친 커밋 메시지를 지정
+- - -
+### (4) 명령 squash 방법
+#### ◈ 사례
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/30b24bc7-cb72-47a2-a567-b9b37c35675e)
+- - -
