Update 26. 커밋 이력 수정.md

--- a/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
+++ b/오픈소스소프트웨어/Week12/26. 커밋 이력 수정.md
@@ -82,3 +82,23 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/30b24bc7-cb72-47a2-a567-b9b37c35675e)
 - - -
+## == Summary ==
+- - -
+* * *
+### (1) 최신 커밋 메시지 수정
+  - $ git commit --amend –m 'new message'
+- - -
+### (2) 편집기로 최신 커밋 메시지 수정
+  - $ git commit --amend
+- - -
+### (3) 파일 수정 후 추가, 메시지 수정 없이 최신 커밋으로 수정
+  - $ git commit --amend --no-edit 
+- - -
+### (4) 이전 커밋 HEAD~2..HEAD까지 각각의 커밋을 수정
+  - $ git rebase --interactive HEAD~3
+#### ◈ 주요 rebase –i 대화형 명령어
+  - p(ick): 해당 커밋을 수정하지 않고 그대로 사용
+  - r(eword): 개별 커밋 메시지를 다시 작성
+  - s(quash): 계속된 이후 커밋을 이전 커밋에 결합
+  - d(rop): 커밋 자체를 삭제
+- - -
