Update 28. 버전 되돌리기 reset.md

--- a/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
+++ b/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
@@ -29,3 +29,21 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/e0798700-e584-4e79-8297-bc4bd831074f)
 - - -
+### (4) reset 옵션 --hard, --mixed, --soft
+#### ◈ reset의 3가지 옵션
+  - 무조건 깃 저장소에는 복사
+
+  - 작업 폴더와 스테이지 영역의 내용은 어떻게 처리할까?
+
+    - --hard, --mixed, --soft
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/9e5e2fe6-b604-40e7-9e84-38db3e5233e8)
+- - -
+### (5) reset 옵션 --hard
+#### ◈ $ git reset --hard HEAD~
+  - 지정된 HEAD~(커밋 메시지 Alphabet)의 내용으로 작업 폴더와 스테이지 영역, 깃 저장소가 모두 복사・수정
+
+    - reset 전에 있던 작업 폴더와 스테이지 영역에 작업 내용이 모두 사라지므로 주의가 필요
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/55a04ef1-23f0-459a-92af-82b8d0f69b34)
+- - -
