Update 28. 버전 되돌리기 reset.md

--- a/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
+++ b/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
@@ -47,3 +47,33 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/55a04ef1-23f0-459a-92af-82b8d0f69b34)
 - - -
+### (6) reset 옵션 --hard
+#### ◈ $ git reset --hard HEAD~2
+  - 지정된 HEAD~(커밋 메시지 Alphabet)의 내용으로 작업 폴더와 스테이지 영역, 깃 저장소가 모두 복사・수정
+
+    - reset 전에 있던 작업 폴더와 스테이지 영역에 작업 내용이 모두 사라지므로 주의가 필요
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/3c631af4-7113-42ae-8aa4-516e0e9bdf21)
+- - -
+### (7) reset 옵션 --mixed
+#### ◈ $ git reset --mixed HEAD~
+  - 지정된 HEAD~(커밋 메시지 Alphabet)의 내용으로 스테이지 영역과 깃 저장소가 모두 복사・수정
+
+    - 커밋 메시지 Alphanumeric의 로그 이력과 함께 당시의 스테이지 영역, 깃 저장소 내용이 모두 사라짐
+    - 다만 작업 폴더의 내용은 이전 그대로 남음
+  - --mixed는 기본 옵션으로 git reset과 동일
+
+    - 옵션 --mixed는 옵션이 없는 것과 같음
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/5d8768bd-5ffb-4864-8d67-8700f896823e)
+- - -
+### (8) reset 옵션 soft
+#### ◈ $ git reset --soft HEAD~
+  - 지정된 HEAD~(커밋 메시지 Alphabet)의 내용으로 깃 저장소만 복사・수정
+
+  - 커밋 메시지 Alphanumeric의 로그 이력은 사라짐
+
+    - 작업 폴더와 스테이지 영역의 내용이 모두 이전 그대로 남음
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/dcec7891-df4b-49e2-9118-c0b8f7c2649b)
+- - -
