--- a/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
+++ b/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
@@ -67,7 +67,7 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/5d8768bd-5ffb-4864-8d67-8700f896823e)
 - - -
-### (8) reset 옵션 soft
+### (8) reset 옵션 --soft
 #### ◈ $ git reset --soft HEAD~
   - 지정된 HEAD~(커밋 메시지 Alphabet)의 내용으로 깃 저장소만 복사・수정
 
@@ -76,4 +76,26 @@
     - 작업 폴더와 스테이지 영역의 내용이 모두 이전 그대로 남음
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/dcec7891-df4b-49e2-9118-c0b8f7c2649b)
+- - -
+## 2) reset 정리, checkout과 reset 비교
+- - -
+* * *
+### (1) reset 3가지 방식
+#### ◈ $ git reset --옵션 commitID
+  - --hard
+
+    - 인자인 커밋 깃 저장소의 내용을 작업 폴더와 스테이지 영역, 그리고 깃 저장소 모두에 복사・수정
+  - --mixed
+
+    - 기본 옵션으로 스테이지 영역과 깃 저장소 두 곳에 복사・수정
+  - --soft
+
+    - 깃 저장소에만 복사・수정하므로 작업 폴더와 스테이지 영역은 이전 내용이 그대로 남음
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/304fbd13-f046-446c-9ebd-6ef12b009bd5)
+- - -
+### (2) reset 옵션 정리
+#### ◈ 옵션 --hard --mixed --soft
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/488b519f-ffe3-4f52-9aa0-e4c40b25e885)
 - - -
