Update 28. 버전 되돌리기 reset.md

--- a/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
+++ b/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
@@ -99,3 +99,36 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/488b519f-ffe3-4f52-9aa0-e4c40b25e885)
 - - -
+### (3) 커밋 되돌리기
+#### ◈ $ git reset <옵션> <돌아가고 싶은 커밋> 
+  - hard, mixed, soft 세가지
+
+  - --soft
+
+    - 돌아가려 했던 이력으로 되돌아 갔지만
+    - 해당 내용의 인덱스(또는 스테이지)도 이전 그대로
+
+      -> 바로 다시 커밋할 수 있는 상태로 남아있는 것
+
+    - 다시 마지막 이전 head로 돌아가려면
+
+      -> Commit 만 필요
+  - --mixed
+
+    - 역시 이력은 되돌려지고, 인덱스도 되돌아가는 커밋의 내용으로 초기화
+    - 다시 마지막 이전 head로 돌아가려면
+
+      -> add, commit이 필요
+  - --hard
+
+    - 돌아가려는 이력 이후의 모든 내용을 삭제
+    - 다시 마지막 이전 head로 돌아가려면
+
+      -> 파일 수정, add, commit 필요
+- - -
+### (4) reset 후 다시 바로 이전 상태로 되돌아가기
+#### ◈ 'ORIG_HEAD’ 이용하면 매우 간단
+  - 바로 이전 커밋 참조
+
+    - $ git reset --hard ORIG_HEAD
+- - -
