Update 28. 버전 되돌리기 reset.md

--- a/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
+++ b/오픈소스소프트웨어/Week13/28. 버전 되돌리기 reset.md
@@ -132,3 +132,28 @@
 
     - $ git reset --hard ORIG_HEAD
 - - -
+### (5) reset과 checkout 비교
+#### ◈ $ git reset 9033
+  - 브랜치의 마지막 커밋을 수정하는 명령
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/e38151f5-7194-4bb5-b4ab-2d98244459f4)
+#### ◈ $ git checkout 9033
+  - HEAD 포인터를 브랜치 마지막 커밋 이전으로 이동하는 명령
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/629c763f-82a5-40a6-bda1-6b5352421549)
+- - -
+## == Summary ==
+- - -
+* * *
+### (1) HEAD~2의 내용으로 작업 디렉토리와 스테이징 영역, 깃 저장소에 복사
+#### ◈ $ git reset --hard HEAD~2
+- - -
+### (2) HEAD~2의 내용으로 스테이징 영역과 깃 저장소에 복사
+#### ◈ $ git reset --mixed HEAD~2
+- - -
+### (3) HEAD~2의 내용으로 깃 저장소에 복사
+#### ◈ $ git reset --soft HEAD~2
+- - -
+### (4) 이전에 수행한 reset을 바로 취소하는 명령
+#### ◈ $ git reset --hard ORIG_HEAD
+- - -
