Update 30. 커밋 취소 revert.md

--- a/오픈소스소프트웨어/Week13/30. 커밋 취소 revert.md
+++ b/오픈소스소프트웨어/Week13/30. 커밋 취소 revert.md
@@ -16,4 +16,32 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/4bf882d8-2ab5-4f77-ab41-3465ea64a230)
 - - -
+### (2) revert 충돌과 해결
+#### ◈ 인자가 HEAD~와 같이 HEAD 이전을 취소하면 충돌이 발생할 수 있음
+  - 충돌이 발생하지 않으려면
 
+    - 바로 이전 취소를 여러 번 계속
+    - 마치 워드 프로세서에서 취소 [ctrl + z]를 여러 번 하는 것과 비슷
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/c1b0e718-e74f-40df-a712-ae400c2cc5a8)
+- - -
+### (3) 명령 revert
+#### ◈ 옵션 --no-edit
+  - 추가되는 커밋 메시지가 자동으로 ‘Revert “이전 커밋 메시지”’으로 지정
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/da470d15-d8cb-4b99-8ca3-18f91072b64e)
+- - -
+### (4) 오류가 발생해 revert가 취소
+#### ◈ 커밋할 것이 있고 작업 영역(working tree)이 깨끗(clean)하지 않으면 오류
+  - Nothing to commit, working tree clean
+#### ◈ 해결 방법
+  - 커밋을 하고 다시 revert 하는 방법
+
+    - 현재 커밋 내용으로 작업 폴더와 스테이지 영역, 깃 저장소를 모두 수정・복사
+
+      -> 수정한 내용이 사라짐
+  - git reset --hard HEAD~
+
+    - 이전 커밋 내용으로 작업 폴더와 스테이지 영역, 깃 저장소를 모두 수정・복사
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> 수정한 내용이 사라지고<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> 현재 커밋 로그도 삭제</p>
+- - -
