Update 30. 커밋 취소 revert.md

--- a/오픈소스소프트웨어/Week13/30. 커밋 취소 revert.md
+++ b/오픈소스소프트웨어/Week13/30. 커밋 취소 revert.md
@@ -46,3 +46,39 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> 수정한 내용이 사라지고<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> 현재 커밋 로그도 삭제</p>
 
 - - -
+### (5) revert로 HEAD 바로 이전 상태로 돌아가기
+#### ◈ 취소 인자를 HEAD로 사용
+  - 이전 커밋 수 3개에 비해 revert 성공 후 커밋이 하나 추가되어 총 4개
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/a342bc59-2e4e-4ba0-9a37-3f7712c3a009)
+- - -
+### (6) $ git revert HEAD
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/4239fa1c-668c-4c7d-b586-0bdd02c740d0)
+- - -
+## 2) reset vs revert 비교
+- - -
+* * *
+### (1) reset vs revert
+#### ◈ 되돌리기와 취소
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/a41daec3-3fd1-4272-a91b-444202db58dc)
+- - -
+### (2) reset vs revert
+#### ◈ 되돌리기, 재설정 reset
+  - 특정 커밋으로 되돌아가고 그 이후의 로그 이력은 모두 제거
+#### ◈ 커밋 취소 revert 
+  - 특정 커밋을 취소하는 새로운 커밋 생성, 이전 모든 이력은 그대로 남음
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/27cb4e56-8252-4996-988b-c438668c35cc)
+- - -
+## == Summary ==
+- - -
+* * *
+### (1) 취소 revert 전체 조건
+#### ◈ Nothing to commit, working tree clean
+- - -
+### (2) HEAD를 취소해 HEAD~ 상태로 가는 커밋을 생성
+#### ◈ $ git revert HEAD
+#### ◈ $ git revert HEAD --no-edit
+- - -
